syntax = "proto3";

package SBI.iot.common;

enum EFANSPEED
{
    Off = 0;
	Min = 1;
	Max = 2;

	Count = 3; // How many possible fan speed there are
}

message FanspeedSet
{
	EFANSPEED curr = 1;
}

enum ETEMPERATUREUNIT
{
	Celcius = 0;
	Farenheit = 1;
}

message TemperatureSetPoint
{
	ETEMPERATUREUNIT unit = 1;
    float temp = 2;
}

message Date
{
	uint32 year = 1;
	uint32 month = 2;
	uint32 day = 3;
}

message Time
{
	uint32 hour = 1;
	uint32 min = 2;
	uint32 sec = 3;
	uint32 millis = 4;
}

message DateTime
{
	Date date = 1;
	Time time = 2;
}

message Version
{
	uint32 major = 1;
	uint32 minor = 2;
	uint32 revision = 3;
}
